@@ -161,7 +161,7 @@
 /test/gl_overlay
 /test/glpuzzle
 /test/hello
-/test/help
+/test/help_dialog
 /test/icon
 /test/iconize
 /test/image
